Update NickModAnalyzer.ps1